# cmake_example

./: readme.md
test01/test01_0/: CMakeLists.txt  main.cpp
test01/test01_1/: CMakeLists.txt  read_video.cpp
test02/: CMakeLists.txt  main.cpp
test02/inludes/: CMakeLists.txt  show.h
test03/: CMakeLists.txt  main.cpp  show.cpp
test04/: CMakeLists.txt  main.cpp
test04/includes/: CMakeLists.txt
test05/: CMakeLists.txt  MNN_Infer.cpp  MNN_Infer.h  main.cpp
